atualizacao projeto arcus

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Bom Atendimento Acima de Tudo · Soluções de alta qualidade e precisão · Estamos a 19 anos na área de tecnologia ao lado de nossos clientes.">
     <title>Arcus Tecnologia</title>
+    <link rel="stylesheet" href="fontes/fontawesome/css/all.css">
     <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
     <link rel="shortcut icon" href="imagens/favicon_arcus.ico" type="image/x-icon">
     <link rel="stylesheet" href="estilos/style.css">
@@ -32,19 +33,41 @@
             </div>
         </section>
 
-        <section class="conteudo-secundario">
-            <div class="conteudo-secundario-box-imagem">
-                <img class="conteudo-secundario-imagem" src="imagens/manage_history_FILL0_wght400_GRAD0_opsz48.svg" alt="">
-                <span class="material-symbols-outlined">
-                    manage_history
-                    </span>
+        <section>
+            <p class="conteudo-secundario-paragrafo-principal">
+                Soluções de alta qualidade e precisão
+            </p>
+            <div class="conteudo-secundario">
+                <!--box gestao de ponto-->
+                <div class="conteudo-secundario-box-icone">
+                    <a href="#">
+                        <i class="fa-solid fa-people-group conteudo-secundario-icone"></i>
+                        <h2 class="conteudo-secundario-box-icone-titulo"><strong>Gestão de Ponto</strong></h2>
+                        <p class="conteudo-secundario-box-icone-paragrafo">Sistema de controle de ponto.</p>
+                    </a>
+                </div>
+                <!--box relogio-->
+                <div class="conteudo-secundario-box-icone">
+                    <a href="#">
+                        <i class="fa-solid fa-fingerprint conteudo-secundario-icone"></i>
+                        <h2 class="conteudo-secundario-box-icone-titulo"><strong>Relógio de Ponto</strong></h2>
+                        <p class="conteudo-secundario-box-icone-paragrafo">Relógio de ponto homologado.</p>
+                    </a>
+                </div>
+                <!--box forca de vendas-->
+                <div class="conteudo-secundario-box-icone">
+                    <a href="#">
+                        <i class="fa-solid fa-magnifying-glass-chart conteudo-secundario-icone"></i>
+                        <h2 class="conteudo-secundario-box-icone-titulo"><strong>Força de Vendas</strong></h2>
+                        <p class="conteudo-secundario-box-icone-paragrafo">Automação de força de vendas.</p>
+                    </a>
+                </div>
             </div>
-
         </section>
         
     </main>
     <footer>
-
+        
     </footer>
 </body>
 </html>
