atualização projeto arcus

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="fontes/fontawesome/css/all.css">
     <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
     <link rel="shortcut icon" href="imagens/favicon_arcus.ico" type="image/x-icon">
+    <link rel="stylesheet" href="estilos/media-query.css">
     <link rel="stylesheet" href="estilos/style.css">
 </head>
 <body>
@@ -28,14 +29,17 @@
                 <h1 class="conteudo-principal-titulo">bom atendimento acima <br> de tudo</h1>
                 <p class="conteudo-principal-paragrafo">Inteligência em Identificação de Funcionários</p>
             </div>
+            <img class="conteudo-principal-imagem" src="imagens/busines.jpg" alt="Busines">
+            <!--
             <div class="conteudo-principal-box-imagem">
                 <img class="conteudo-principal-imagem" src="imagens/busines.jpg" alt="Busines">
             </div>
+            -->
         </section>
 
         <section>
             <p class="conteudo-secundario-paragrafo-principal">
-                Soluções de alta qualidade e precisão
+                Soluções de Alta Qualidade e Precisão
             </p>
             <div class="conteudo-secundario">
                 <!--box gestao de ponto-->
@@ -66,12 +70,26 @@
         </section>
 
         <section class="conteudo-terceiro">
-
+            <h1 class="conteudo-terceiro-titulo">A EMPRESA</h1>
+            <p class="conteudo-terceiro-paragrafo">
+                Estamos a 19 anos na área de tecnologia ao lado de nossos clientes.
+                Nenhum trabalho é bem feito sem um bom atendimento. Nós queremos conversar com você, entender suas preocupações e necessidades para oferecer soluções realmente necessárias para o seu negócio.
+            </p>
         </section>
         
     </main>
-    <footer>
-        
+    <footer class="rodape">
+        <section class="rodape-logo">
+            <img src="imagens/logo_arcus300px.png" alt="Logo Arcus">
+        </section>
+        <section class="rodape-contato">
+            <address>
+                <p class="rodape-contato-endereco-paragrafo"><strong>Endereço: </strong><a class="rodape-contato-endereco-ancora" href="https://goo.gl/maps/iH9K3qbCVzkkC5bRA" target="_blank">R. Domingos Antônio Calábria, 150 - Pres. Roosevelt, Uberlândia - MG, 38401-222</a></p>
+                <p class="rodape-contato-endereco-paragrafo"><strong>E-mail:</strong> <a class="rodape-contato-endereco-ancora"  href="mailto:contato@arcus.com.br">contato@arcus.com.br</a></p>
+                <p class="rodape-contato-endereco-paragrafo"><strong>Telefone: </strong><a class="rodape-contato-endereco-ancora" href="tel:553432350500">(34) 3235-0500</a></p>
+                <p class="rodape-contato-endereco-paragrafo"><strong>Celular: </strong><a class="rodape-contato-endereco-ancora" href="tel:5534996650470">(34) 99665-0470</a></p>
+            </address>
+        </section>
     </footer>
 </body>
 </html>
